--- a/config/database.yml
+++ b/config/database.yml
@@ -29,10 +29,10 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: password_manager
+  username: <%= ENV['PASSWORD_MANAGER_DATABASE_USERNAME'] %>
 
   # The password associated with the postgres role (username).
-  password: password1234
+  password: <%= ENV['PASSWORD_MANAGER_DATABASE_PASSWORD'] %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
