--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ development:
   username: <%= ENV['PASSWORD_MANAGER_DATABASE_USERNAME'] %>
 
   # The password associated with the postgres role (username).
-  password: <%= ENV['PASSWORD_MANAGER_DATABASE_PASSWORD'] %>
+  # password: <%= ENV['PASSWORD_MANAGER_DATABASE_PASSWORD'] %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
